translation-tool/inputs/source_meta/objects/HnsPsZsfFsoOdataViews__x.object
<CustomObject>
    <description>HnsPsZsfFsoOdataViews</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsPsZsfFsoOdataViews</externalName>
    <fields>
        <fullName>ACCOUNTID__c</fullName>
        <description>ACCOUNTID</description>
        <externalDeveloperName>ACCOUNTID</externalDeveloperName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_ID__c</fullName>
        <description>BO_ID</description>
        <externalDeveloperName>BO_ID</externalDeveloperName>
        <label>BO_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_ID__c</fullName>
        <description>CASE_ID</description>
        <externalDeveloperName>CASE_ID</externalDeveloperName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLOSED_DTTM__c</fullName>
        <description>CLOSED_DTTM</description>
        <externalDeveloperName>CLOSED_DTTM</externalDeveloperName>
        <label>Closed DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <description>CREATED_BY</description>
        <externalDeveloperName>CREATED_BY</externalDeveloperName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSDISTRIBNAME__c</fullName>
        <description>HNSDISTRIBNAME</description>
        <externalDeveloperName>HNSDISTRIBNAME</externalDeveloperName>
        <label>Distributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSLASTIVRDTTM__c</fullName>
        <description>HNSLASTIVRDTTM</description>
        <externalDeveloperName>HNSLASTIVRDTTM</externalDeveloperName>
        <label>Last IVR DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSORDSUBTYPE__c</fullName>
        <description>HNSORDSUBTYPE</description>
        <externalDeveloperName>HNSORDSUBTYPE</externalDeveloperName>
        <label>Order Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSSCHINSTDTTM__c</fullName>
        <description>HNSSCHINSTDTTM</description>
        <externalDeveloperName>HNSSCHINSTDTTM</externalDeveloperName>
        <label>Scheduled DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSTENTATIVEDTTM__c</fullName>
        <description>HNSTENTATIVEDTTM</description>
        <externalDeveloperName>HNSTENTATIVEDTTM</externalDeveloperName>
        <label>Tentative DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_SITE_ID__c</fullName>
        <description>HNS_SITE_ID</description>
        <externalDeveloperName>HNS_SITE_ID</externalDeveloperName>
        <label>SAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_TYPE__c</fullName>
        <description>ORDER_TYPE</description>
        <externalDeveloperName>ORDER_TYPE</externalDeveloperName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>SETID</description>
        <externalDeveloperName>SETID</externalDeveloperName>
        <label>SETID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_DATE__c</fullName>
        <description>SO_DATE</description>
        <externalDeveloperName>SO_DATE</externalDeveloperName>
        <label>Service Order Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_ID__c</fullName>
        <description>SO_ID</description>
        <externalDeveloperName>SO_ID</externalDeveloperName>
        <label>SO_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_STATUS__c</fullName>
        <description>SO_STATUS</description>
        <externalDeveloperName>SO_STATUS</externalDeveloperName>
        <label>SO_STATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZLASTIVRACTIVITY__c</fullName>
        <description>ZLASTIVRACTIVITY</description>
        <externalDeveloperName>ZLASTIVRACTIVITY</externalDeveloperName>
        <label>Last IVR Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZLASTSOACTIVITY__c</fullName>
        <description>ZLASTSOACTIVITY</description>
        <externalDeveloperName>ZLASTSOACTIVITY</externalDeveloperName>
        <label>ZLASTSOACTIVITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZSF_WAIVE_DIS_FEE__c</fullName>
        <description>ZSF_WAIVE_DIS_FEE</description>
        <externalDeveloperName>ZSF_WAIVE_DIS_FEE</externalDeveloperName>
        <label>Waive Dispatch Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZSOTYPE__c</fullName>
        <description>ZSOTYPE</description>
        <externalDeveloperName>ZSOTYPE</externalDeveloperName>
        <label>ZSOTYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_CV_ORDER_TYPE__c</fullName>
        <description>Z_CV_ORDER_TYPE</description>
        <externalDeveloperName>Z_CV_ORDER_TYPE</externalDeveloperName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_LAST_SOA_DTTM__c</fullName>
        <description>Z_LAST_SOA_DTTM</description>
        <externalDeveloperName>Z_LAST_SOA_DTTM</externalDeveloperName>
        <label>Last Service Order Activity DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_STATUS__c</fullName>
        <description>Z_STATUS</description>
        <externalDeveloperName>Z_STATUS</externalDeveloperName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsPsZsfFsoOdataViews</label>
    <pluralLabel>HnsPsZsfFsoOdataViews</pluralLabel>
</CustomObject>